--- a/Traqqer/Dashboard.storyboard
+++ b/Traqqer/Dashboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bxy-tj-tCf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bxy-tj-tCf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <scenes>
         <!--Dashboard-->
@@ -52,8 +52,7 @@
         <!--Navigation Controller-->
         <scene sceneID="sq4-X4-x9i">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WNg-eY-Uxm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bxy-tj-tCf" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bxy-tj-tCf" customClass="NavigationController" customModule="Traqqer" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="mBT-n6-cAF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -64,6 +63,7 @@
                         <segue destination="qrb-L8-do7" kind="relationship" relationship="rootViewController" id="qLQ-o2-7Zk"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WNg-eY-Uxm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="212" y="324"/>
         </scene>
