--- a/Traqqer/DashboardStatsCell.xib
+++ b/Traqqer/DashboardStatsCell.xib
@@ -1,113 +1,70 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXR-BQ-tO6">
-                        <rect key="frame" x="0.0" y="0.0" width="166" height="75"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbW-jf-icc">
-                                <rect key="frame" x="8" y="34" width="67" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaj-Xb-smz">
-                                <rect key="frame" x="8" y="8" width="46" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="gaj-Xb-smz" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="leadingMargin" id="GC2-1a-9iR"/>
-                            <constraint firstAttribute="bottom" secondItem="sbW-jf-icc" secondAttribute="bottom" id="Lgg-um-0fH"/>
-                            <constraint firstAttribute="centerX" secondItem="sbW-jf-icc" secondAttribute="centerX" id="Vcq-Sb-oex"/>
-                            <constraint firstItem="sbW-jf-icc" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="leadingMargin" id="agj-ck-e0B"/>
-                            <constraint firstItem="sbW-jf-icc" firstAttribute="top" secondItem="gaj-Xb-smz" secondAttribute="bottom" constant="5" id="eIC-uJ-pU8"/>
-                            <constraint firstItem="gaj-Xb-smz" firstAttribute="top" secondItem="GXR-BQ-tO6" secondAttribute="topMargin" id="lgt-i9-bhV"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Vcq-Sb-oex"/>
-                            </mask>
-                        </variation>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iZj-NM-Azd">
-                        <rect key="frame" x="166" y="0.0" width="165" height="75"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvo-c4-L9a">
-                                <rect key="frame" x="147" y="8" width="10" height="38"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0C-1f-mD6">
-                                <rect key="frame" x="8" y="46" width="41" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gE-kd-rV2">
-                                <rect key="frame" x="146" y="46" width="10" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="7gE-kd-rV2" firstAttribute="bottom" secondItem="iZj-NM-Azd" secondAttribute="bottomMargin" id="1ua-zJ-mcY"/>
-                            <constraint firstItem="dvo-c4-L9a" firstAttribute="leading" secondItem="iZj-NM-Azd" secondAttribute="leading" constant="8" id="3pH-EM-Jgo"/>
-                            <constraint firstAttribute="bottom" secondItem="G0C-1f-mD6" secondAttribute="bottom" constant="8" id="Iz5-Cv-FY1"/>
-                            <constraint firstItem="7gE-kd-rV2" firstAttribute="top" secondItem="dvo-c4-L9a" secondAttribute="bottom" id="Jua-d0-EWy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7gE-kd-rV2" secondAttribute="trailing" constant="1" id="KYr-ut-ju6"/>
-                            <constraint firstItem="dvo-c4-L9a" firstAttribute="top" secondItem="iZj-NM-Azd" secondAttribute="top" constant="8" id="S7e-xo-78l"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dvo-c4-L9a" secondAttribute="trailing" id="Tr9-U7-dXb"/>
-                            <constraint firstItem="G0C-1f-mD6" firstAttribute="leading" secondItem="iZj-NM-Azd" secondAttribute="leading" constant="8" id="WpA-a3-9hk"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="3pH-EM-Jgo"/>
-                            </mask>
-                        </variation>
-                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qS-5i-Wq1">
+                        <rect key="frame" x="8" y="9" width="144" height="21"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="Goal" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EzN-Op-05K">
+                        <rect key="frame" x="256" y="5" width="56" height="30"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Value /" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pET-I9-kCZ">
+                        <rect key="frame" x="175" y="5" width="81" height="30"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="iZj-NM-Azd" secondAttribute="trailing" id="3Y1-yG-eF5"/>
-                    <constraint firstItem="GXR-BQ-tO6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5yT-Ls-NFU"/>
-                    <constraint firstItem="iZj-NM-Azd" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="trailing" id="6J1-6P-jC3"/>
-                    <constraint firstAttribute="bottom" secondItem="iZj-NM-Azd" secondAttribute="bottom" id="9O2-Ss-DPv"/>
-                    <constraint firstItem="GXR-BQ-tO6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="A3m-7C-rvC"/>
-                    <constraint firstAttribute="trailing" secondItem="GXR-BQ-tO6" secondAttribute="trailing" id="B8K-MT-559"/>
-                    <constraint firstAttribute="bottom" secondItem="GXR-BQ-tO6" secondAttribute="bottom" id="I25-h7-J2n"/>
-                    <constraint firstItem="iZj-NM-Azd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="RTn-Ye-kvO"/>
-                    <constraint firstItem="iZj-NM-Azd" firstAttribute="width" secondItem="GXR-BQ-tO6" secondAttribute="width" id="VQ3-6z-37T"/>
+                    <constraint firstItem="pET-I9-kCZ" firstAttribute="leading" secondItem="6qS-5i-Wq1" secondAttribute="trailing" constant="8" id="0bv-FY-Z9S"/>
+                    <constraint firstAttribute="bottom" secondItem="pET-I9-kCZ" secondAttribute="bottom" constant="8" id="4Zs-s5-qXC"/>
+                    <constraint firstItem="6qS-5i-Wq1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="H0g-SG-Zup"/>
+                    <constraint firstItem="6qS-5i-Wq1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="LEW-cD-lrL"/>
+                    <constraint firstItem="pET-I9-kCZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="RbA-as-0d9"/>
+                    <constraint firstAttribute="centerY" secondItem="EzN-Op-05K" secondAttribute="centerY" id="Z88-u5-0Mw"/>
+                    <constraint firstAttribute="bottom" secondItem="6qS-5i-Wq1" secondAttribute="bottom" constant="9" id="aBq-mo-QAg"/>
+                    <constraint firstItem="EzN-Op-05K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qWR-MI-DSC"/>
+                    <constraint firstAttribute="centerY" secondItem="pET-I9-kCZ" secondAttribute="centerY" id="rZm-Vj-Nct"/>
+                    <constraint firstAttribute="bottom" secondItem="EzN-Op-05K" secondAttribute="bottom" constant="8" id="wxH-SK-Bku"/>
+                    <constraint firstAttribute="trailing" secondItem="EzN-Op-05K" secondAttribute="trailing" constant="8" id="yIO-DQ-NbP"/>
+                    <constraint firstItem="EzN-Op-05K" firstAttribute="leading" secondItem="pET-I9-kCZ" secondAttribute="trailing" id="zaW-hX-pRB"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
-                        <exclude reference="B8K-MT-559"/>
+                        <exclude reference="0bv-FY-Z9S"/>
+                        <exclude reference="4Zs-s5-qXC"/>
+                        <exclude reference="RbA-as-0d9"/>
+                        <exclude reference="qWR-MI-DSC"/>
+                        <exclude reference="wxH-SK-Bku"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
-                <outlet property="duration" destination="sbW-jf-icc" id="joP-jL-AWQ"/>
-                <outlet property="goalLabel" destination="7gE-kd-rV2" id="zlR-ku-ehr"/>
-                <outlet property="goalStaticLabel" destination="G0C-1f-mD6" id="eOp-wR-SxE"/>
-                <outlet property="nameLabel" destination="gaj-Xb-smz" id="g8U-Hh-oY1"/>
-                <outlet property="totalLabel" destination="dvo-c4-L9a" id="ipG-k9-Jgs"/>
+                <outlet property="goal" destination="EzN-Op-05K" id="wOE-UB-1mX"/>
+                <outlet property="name" destination="6qS-5i-Wq1" id="9Ol-gl-ZKS"/>
+                <outlet property="value" destination="pET-I9-kCZ" id="vpl-6E-K0x"/>
             </connections>
-            <point key="canvasLocation" x="265.5" y="255"/>
+            <point key="canvasLocation" x="265" y="230"/>
         </tableViewCell>
     </objects>
 </document>
